Bug 153083 - FILEOPEN DOCX Localized style name not merged in TOC settings, unlike in Navigator style list
Summary: FILEOPEN DOCX Localized style name not merged in TOC settings, unlike in Navi...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: filter:docx
Depends on:
Blocks: DOCX-TableofContents
  Show dependency treegraph
 
Reported: 2023-01-18 08:44 UTC by Gabor Kelemen (Collabora)
Modified: 2024-03-27 22:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The example file in Writer after updating the TOC - the Pellentesque habitant entry is missing (77.62 KB, image/png)
2023-01-18 08:44 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-01-18 08:44:43 UTC
Created attachment 184738 [details]
The example file in Writer after updating the TOC - the Pellentesque habitant entry is missing

This is a followup to bug 153082

Opening attachment 184730 [details] which was made in a German UI Word 2013, the Intensives Zitat style is used in the TOC as custom style.
When the file is opened in English UI Writer, the custom settings of the Intensives Zitat style are merged into Intense Quote style - font becomes green.
In the TOC settings we see on attachment 184732 [details] that the TOC settings use the Intense Zitat style as additional style instead of Intense Quote.
Consequently updating the TOC makes the paragraph with that style disappear.

1, Open attachment 184730 [details] in Writer
2, Right click on the TOC, Edit Index
3, Observe the Intensives Zitat style is imported as additional style.

Since the Intensives Zitat style was merged at open time into the Intense Quote style, updating the index will remove the paragraph having this style from the 
TOC.

The Additional Styles list should detect at import that the Intensives Zitat style should be Intense Quote and transfer the TOC setting to that one.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f1830bff71847a9c17715cff52383956719847fe
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Michael Stahl 2023-01-18 19:22:26 UTC
sorry didn't notice there was a separate bug for this, was fixed with:


Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ecbad22fdf81c6f072b6c9f9c16dbba47fe4748c

tdf#153082 writerfilter: import locale-dependent TOC \t style names

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-01-19 12:43:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/d42e7d50225d5ff7359cfc765ec9694cf83c9749

tdf#153083 writerfilter: import locale-dependent TOC \t style names

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2023-01-20 18:01:36 UTC
there is a little problem here... we now effectively import the en-US Word style name, and if we export it to DOCX and Word imports it in the locale from which the file originally was written, it *can't* find the en-US style because it exists only with localised name - so the index can't be updated properly.

not sure what to do about that, is it worse than the original problem?
Comment 4 Commit Notification 2023-01-31 17:03:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca71482237d31703454062b8b2f544a8bacd2831

tdf#153083 writerfilter: import locale-dependent TOC \t style names, 2

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-02-07 15:17:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0fafc03c24996ccd53dbf76eaab372779cfbca90

tdf#153083 writerfilter,sw: consolidate StyleName->StyleId in msfilter

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-02-07 17:13:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/345f23474845da0defa4a9276228f54b5ded5736

tdf#153083 writerfilter,sw: DOCX locale-dependent TOC \t style names, 3

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-02-08 14:57:06 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/8e3eb90ffc50bb1b53214d6953765ebb4ce47690

tdf#153083 writerfilter: import locale-dependent TOC \t style names, 2

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-02-08 14:57:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/708252dc7e68a014a5d7b730688d0cab4a85df61

tdf#153083 writerfilter,sw: DOCX locale-dependent TOC \t style names, 3

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gabor Kelemen (Collabora) 2023-02-16 00:37:24 UTC
Verified in

Version: 7.5.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 1e7ee035992a0b29f42eac56ad82e2a1b0fe8ccd
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

and current master
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 14a36ad49518bcb5b606b0f1640e3ca56b636e89
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

The TOC can be updated now.